refactor(person): optimise person module and clean up code