@@ -1,7 +1,6 @@
 package ua.lviv.bas.cinema.service.cinema;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.cache.annotation.CacheConfig;
 import org.springframework.cache.annotation.CacheEvict;
@@ -43,58 +42,43 @@ public class PersonService {
 	@Transactional
 	public PersonResponse createPerson(PersonRequest request) {
 		log.info("Creating person: {}", request.name());
-
-		String personName = request.name();
-		validatePersonUniqueness(personName, request.role(), null);
-
-		Person person = personMapper.toPerson(request);
-		person.setName(personName);
-		Person saved = personRepository.save(person);
-
-		log.debug("Person created with ID: {}", saved.getId());
-		return personMapper.toPersonResponse(saved);
+		return createPersonInternal(request.name(), request.role(), personMapper.toPerson(request));
 	}
 
 	@CacheEvict(allEntries = true)
 	@Transactional
 	public PersonResponse quickCreatePerson(QuickCreatePersonRequest request) {
 		log.info("Quick creating person: {} with role: {}", request.name(), request.role());
+		Person person = Person.builder().name(request.name()).role(request.role()).build();
+		return createPersonInternal(request.name(), request.role(), person);
+	}
 
-		String personName = request.name();
-		validatePersonUniqueness(personName, request.role(), null);
-
-		Person person = Person.builder().name(personName).role(request.role()).build();
-
+	private PersonResponse createPersonInternal(String name, PersonRole role, Person person) {
+		validatePersonUniqueness(name, role, null);
 		Person saved = personRepository.save(person);
-		log.debug("Person quick-created with ID: {}", saved.getId());
+		log.debug("Person created with ID: {}", saved.getId());
 		return personMapper.toPersonResponse(saved);
 	}
 
 	@Cacheable(key = "#id")
 	public PersonResponse getPersonById(Long id) {
 		log.debug("Retrieving person by id: {}", id);
-
 		Person person = findPersonById(id);
 		return personMapper.toPersonResponse(person);
 	}
 
-	@Caching(evict = { @CacheEvict(key = "#id"),
-			@CacheEvict(key = "'search-' + #request.name() + '-' + #request.role() + '-' + 0 + '-' + 20"),
-			@CacheEvict(key = "'popular-' + #request.name() + '-' + #request.role() + '-' + 10"),
-			@CacheEvict(allEntries = true) })
+	@Caching(evict = { @CacheEvict(key = "#id"), @CacheEvict(allEntries = true) })
 	@Transactional
 	public PersonResponse updatePerson(Long id, PersonRequest request) {
 		log.info("Updating person with id: {}", id);
 
 		Person existing = findPersonById(id);
-
-		String personName = request.name();
-		validatePersonUniqueness(personName, request.role(), id);
+		validatePersonUniqueness(request.name(), request.role(), id);
 
 		personMapper.updatePersonFromRequest(request, existing);
-		existing.setName(personName);
-		Person updated = personRepository.save(existing);
+		existing.setName(request.name());
 
+		Person updated = personRepository.save(existing);
 		log.debug("Person updated with ID: {}", updated.getId());
 		return personMapper.toPersonResponse(updated);
 	}
@@ -114,19 +98,15 @@ public class PersonService {
 	@Cacheable(key = "'search-' + #name + '-' + #role + '-' + #pageable.pageNumber + '-' + #pageable.pageSize")
 	public Page<PersonResponse> searchPersons(String name, PersonRole role, Pageable pageable) {
 		log.info("Searching persons: name='{}', role={}", name, role);
-
 		Page<PersonProjection> projections = personRepository.findProjectionsByFilters(name, role, pageable);
-
 		return projections.map(personMapper::toPersonResponse);
 	}
 
 	@Cacheable(key = "'popular-' + #name + '-' + #role + '-' + #limit")
 	public List<PersonResponse> getPopularPersons(String name, PersonRole role, int limit) {
 		log.info("Getting popular persons: name='{}', role={}, limit={}", name, role, limit);
-
 		Page<PersonProjection> page = personRepository.findProjectionsByFilters(name, role, PageRequest.of(0, limit));
-
-		return page.getContent().stream().map(personMapper::toPersonResponse).collect(Collectors.toList());
+		return page.getContent().stream().map(personMapper::toPersonResponse).toList();
 	}
 
 	@Cacheable(key = "'by-ids-' + #ids.hashCode()")
@@ -138,7 +118,7 @@ public class PersonService {
 		}
 
 		List<Person> persons = personRepository.findAllById(ids);
-		return personMapper.toPersonResponseList(persons);
+		return persons.stream().map(personMapper::toPersonResponse).toList();
 	}
 
 	public boolean existsByNameAndRole(String name, PersonRole role) {
